--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "Charles",
   "license": "MIT",
   "dependencies": {
+    "@vuelidate/core": "^2.0.0-alpha.42",
+    "@vuelidate/validators": "^2.0.0-alpha.30",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "concurrently": "^7.2.1",
